@@ -16,6 +16,13 @@ RC_PARALLEL_STARTUP="no"
 
 RC_INTERACTIVE="yes"
 
+# Dynamic /dev managers can trigger coldplug events which cause services to
+# start before we are ready for them. If this happens, we can defer these
+# services to start in the boot runlevel. If you don't want this then set
+# RC_COLDPLUG to no.
+
+RC_COLDPLUG="net.wlan"
+
 # RC_NET_STRICT_CHECKING allows some flexibility with the 'net' service.
 # The following values are allowed:
 #  none  - The 'net' service is always considered up.
